2020/Grammar19.g4
grammar Grammar19;
a16: a95 a7 | a53 a12 ;
a41: a12 a13 | a7 a107 ;
a12: 'a' ;
a56: a17 a12 | a129 a7 ;
a102: a12 a5 | a7 a53 ;
a30: a105 a7 | a26 a12 ;
a66: a7 a5 | a12 a119 ;
a14: a27 a7 | a109 a12 ;
a62: a95 a7 | a43 a12 ;
a21: a12 a12 ;
a23: a12 a112 | a7 a38 ;
a108: a7 a43 | a12 a21 ;
a80: a7 a21 | a12 a91 ;
a72: a7 a41 | a12 a89 ;
a117: a35 a12 | a37 a7 ;
a83: a7 a91 | a12 a5 ;
a13: a94 a12 | a95 a7 ;
a18: a7 a62 | a12 a87 ;
a24: a21 a12 | a19 a7 ;
a35: a7 a81 | a12 a113 ;
a8: a42 | a42 a8 ;
a20: a12 a27 | a7 a1 ;
a120: a12 a29 | a7 a97 ;
a110: a107 a7 | a102 a12 ;
a7: 'b' ;
a32: a7 a92 | a12 a83 ;
a116: a12 a40 | a7 a98 ;
a86: a65 a94 ;
a75: a12 a118 | a7 a119 ;
a46: a7 a103 | a12 a80 ;
a49: a109 a7 | a57 a12 ;
a95: a12 a12 | a7 a7 ;
a128: a7 a19 | a12 a5 ;
a19: a12 a65 | a7 a7 ;
a94: a7 a12 | a12 a7 ;
a99: a38 a12 | a21 a7 ;
a130: a7 a6 | a12 a116 ;
a76: a7 a118 | a12 a94 ;
a85: a7 a67 | a12 a126 ;
a104: a12 a19 | a7 a38 ;
a22: a44 a7 | a24 a12 ;
a79: a66 a7 | a24 a12 ;
a114: a70 a7 | a115 a12 ;
a27: a5 a12 | a118 a7 ;
a4: a7 a91 | a12 a21 ;
a105: a106 a7 | a58 a12 ;
a70: a18 a7 | a2 a12 ;
a33: a7 a112 | a12 a38 ;
a71: a53 a12 | a93 a7 ;
a87: a53 a7 | a119 a12 ;
a28: a7 a64 | a12 a16 ;
a63: a7 a13 | a12 a33 ;
a9: a57 a7 | a36 a12 ;
a34: a7 a74 | a12 a59 ;
a60: a7 a108 | a12 a86 ;
a67: a123 a12 | a72 a7 ;
a37: a52 a12 | a71 a7 ;
a112: a7 a12 ;
a44: a12 a5 | a7 a118 ;
a26: a121 a7 | a63 a12 ;
a50: a127 a12 | a48 a7 ;
a15: a93 a12 | a119 a7 ;
a68: a112 a12 ;
a78: a7 a77 | a12 a36 ;
a59: a49 a12 | a22 a7 ;
a109: a5 a12 | a95 a7 ;
a17: a38 a12 | a119 a7 ;
a54: a7 a68 | a12 a25 ;
a92: a119 a12 | a94 a7 ;
a123: a78 a7 | a20 a12 ;
a65: a7 | a12 ;
a129: a21 a7 | a21 a12 ;
a90: a12 a112 | a7 a95 ;
a98: a7 a93 | a12 a118 ;
a47: a12 a93 | a7 a21 ;
a2: a47 a12 | a103 a7 ;
a115: a125 a7 | a56 a12 ;
a25: a43 a7 | a38 a12 ;
a121: a7 a23 | a12 a99 ;
a36: a12 a95 | a7 a91 ;
a1: a7 a118 | a12 a91 ;
a113: a53 a12 | a119 a7 ;
a42: a12 a85 | a7 a50 ;
a6: a90 a12 | a88 a7 ;
a111: a5 a12 | a5 a7 ;
a69: a12 a117 | a7 a55 ;
a5: a12 a7 ;
a106: a12 a101 | a7 a75 ;
a118: a7 a65 | a12 a7 ;
a77: a7 a112 | a12 a43 ;
a101: a53 a7 | a38 a12 ;
a31: a7 a84 | a12 a45 ;
a107: a53 a7 | a118 a12 ;
a119: a12 a7 | a12 a12 ;
a97: a119 a7 | a112 a12 ;
a57: a12 a119 | a7 a38 ;
a96: a7 a98 | a12 a4 ;
a100: a96 a7 | a120 a12 ;
a84: a12 a114 | a7 a30 ;
a64: a112 a12 | a94 a7 ;
a0: a8 a11 ;
a52: a43 a12 | a118 a7 ;
a74: a12 a28 | a7 a79 ;
a58: a12 a10 | a7 a15 ;
a122: a12 a104 | a7 a29 ;
a127: a130 a12 | a100 a7 ;
a103: a21 a7 ;
a81: a7 a118 | a12 a93 ;
a51: a122 a12 | a9 a7 ;
a10: a118 a7 | a119 a12 ;
a53: a12 a7 | a7 a7 ;
a89: a12 a128 | a7 a80 ;
a82: a12 a32 | a7 a60 ;
a124: a111 a12 | a108 a7 ;
a73: a19 a7 | a5 a12 ;
a3: a7 a98 | a12 a102 ;
a29: a38 a12 | a5 a7 ;
a126: a12 a39 | a7 a51 ;
a43: a7 a12 | a7 a7 ;
a125: a73 a7 | a76 a12 ;
a93: a65 a65 ;
a11: a42 a31 | a42 a11 a31 ;
a45: a12 a69 | a7 a34 ;
a39: a54 a12 | a46 a7 ;
a91: a65 a12 | a12 a7 ;
a61: a7 a124 | a12 a3 ;
a88: a91 a7 | a19 a12 ;
a38: a7 a12 | a12 a12 ;
a48: a61 a12 | a82 a7 ;
a55: a110 a12 | a14 a7 ;
a40: a112 a12 | a43 a7 ;
